# RightCtrl

./: Cargo.toml
resources/: app.manifest  app.rc
src/: app.rs  apps.rs  autostart.rs  config.rs  cycle.rs  focus.rs  hook.rs  ipc.rs  main.rs  single_instance.rs  tray.rs  ui.rs
