[package]
name    = "rightctrl"
version = "0.1.0"
edition = "2024"

[dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_UI_HiDpi",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_System_LibraryLoader",
    "Win32_System_Registry",
    "Win32_Storage_FileSystem",
    "Win32_Graphics_Dwm",
] }
windows-core = "0.58"

nwg = { package = "native-windows-gui", version = "1.0" }
nwd = { package = "native-windows-derive", version = "1.0" }

serde       = { version = "1", features = ["derive"] }
toml        = "0.8"
directories = "5"
parking_lot = "0.12"
once_cell   = "1"
crossbeam-channel = "0.5"
anyhow      = "1"
thiserror   = "1"

tracing             = "0.1"
tracing-subscriber  = { version = "0.3", features = ["env-filter"] }
tracing-appender    = "0.2"

[target.'cfg(windows)'.build-dependencies]
embed-resource = "2"

[profile.release]
lto           = "thin"
codegen-units = 1
strip         = true
